--- a/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_provider_registration_mg.yaml
+++ b/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_provider_registration_mg.yaml
@@ -15,12 +15,9 @@ interactions:
       ParameterSetName:
       - -n --m
       User-Agent:
-      - python/3.8.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.18.0
-      accept-language:
-      - en-US
+      - AZURECLI/2.24.2 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: POST
-    uri: https://management.azure.com/providers/Microsoft.Management/managementGroups/testmg/providers/Microsoft.ClassicInfrastructureMigrate/register?api-version=2020-10-01
+    uri: https://management.azure.com/providers/Microsoft.Management/managementGroups/testmg/providers/Microsoft.ClassicInfrastructureMigrate/register?api-version=2021-01-01
   response:
     body:
       string: ''
@@ -30,7 +27,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 01 Feb 2021 20:34:24 GMT
+      - Tue, 15 Jun 2021 07:44:43 GMT
       expires:
       - '-1'
       pragma:
