--- a/src/azure-cli/requirements.py3.Linux.txt
+++ b/src/azure-cli/requirements.py3.Linux.txt
@@ -49,9 +49,9 @@ azure-mgmt-eventhub==4.1.0
 azure-mgmt-extendedlocation==1.0.0b2
 azure-mgmt-hdinsight==7.0.0
 azure-mgmt-imagebuilder==0.4.0
-azure-mgmt-iotcentral==4.1.0
+azure-mgmt-iotcentral==9.0.0b1
 azure-mgmt-iothub==2.0.0
-azure-mgmt-iothubprovisioningservices==0.2.0
+azure-mgmt-iothubprovisioningservices==1.0.0b1
 azure-mgmt-keyvault==9.0.0
 azure-mgmt-kusto==0.3.0
 azure-mgmt-loganalytics==8.0.0
