--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -927,6 +927,11 @@ backup restore restore-disks:
     storage_account_resource_group:
       rule_exclusions:
       - option_length_too_long
+backup vault create:
+  parameters:
+    cross_subscription_restore_state:
+      rule_exclusions:
+      - option_length_too_long
 backup vault backup-properties set:
   parameters:
     backup_storage_redundancy:
