--- a/scripts/regression_test/regression_test.yml
+++ b/scripts/regression_test/regression_test.yml
@@ -119,6 +119,10 @@ jobs:
 
         source env/bin/activate
 
+        if [[ -n "$(CUSTOM_WHL_URL)" ]]; then
+          pip install $(CUSTOM_WHL_URL) --force-reinstall
+        fi
+
         az login -u $(CLI_LIVE_TEST_ACCOUNT) -p "$(CLI_LIVE_TEST_PASSWORD)"
         az account set -s 0b1f6471-1bf0-4dda-aec3-cb9272f09590
 
@@ -133,6 +137,7 @@ jobs:
 - job: CreatePR
   displayName: CLI Regression Test Create PR
   dependsOn: RerunTests
+  condition: in(dependencies.RerunTests.result, 'Succeeded', 'Skipped')
   pool:
     name: ${{ variables.ubuntu_pool }}
   steps:
